# peripheral-playground

./: .gitmodules  CMakeLists.txt  README.md  flash.sh
board/nucleo-g071rb/: STM32G071RBTX_FLASH.ld  bsp.h  bsp_stm32g071rbT6.h  bsp_stm32g071rbt6.h  startup_stm32g071xx.s
board/stm32f407g-disc1/: STM32F407VGTx_FLASH.ld  bsp.h  bsp_stm32f407vgt6.h  startup_stm32f407xx.s
cfg/: FreeRTOSConfig.h
cmake/: arm-none-eabi-toolchain.cmake
scripts/: flash.sh
src/: app_hooks.c  main.c
src/btn_mgr/: btn_mgr.c  btn_mgr.h
src/led_mgr/: led_mgr.c  led_mgr.h
src/uart_mgr/: uart_mgr.c  uart_mgr.h
